fix: Increased z-index for the add book modal so that it appears infront of the header bar.

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -186,7 +186,7 @@ a {
   --z-sticky: 1020;
   --z-fixed: 1030;
   --z-modal-backdrop: 1040;
-  --z-modal: 1050;
+  --z-modal: 1200;
   --z-popover: 1060;
   --z-tooltip: 1070;
   --z-toast: 1080;
